2001-04-20  Ramiro Estrugo  <ramiro@eazel.com>

	Fix bug 8105 - GConf error getting font for icon view and text
	view.
		
	* libnautilus/nautilus-view-standard-main.c:
	(nautilus_view_standard_main_multi):
	Move the post initialization callback to before the
	component's factory creation.  Otherwise bad things can happen if
	the component assumes that its post init function has already been
	called while in its factory code.  For example, if the post init
	function initialized nautilus preferences and the component
	factory executes code that uses nautilus preferences.
	
2001-04-19  Ramiro Estrugo  <ramiro@eazel.com>

	* libnautilus-extensions/Makefile.am:
	* libnautilus-extensions/nautilus-preferences-dialog.c:
	* libnautilus-extensions/nautilus-preferences-dialog.h:
	Retire this class.  It was a bad idea to use subclassing for the
	specific use of the preferences dialog in nautilus.  Hooking
	signals up to a regular GnomeDialog is good enough.
	
	* libnautilus-extensions/nautilus-global-preferences.h:
	* libnautilus-extensions/nautilus-global-preferences.c:
	(global_preferences_install_defaults),
	(nautilus_global_preferences_initialize):
	Remove the implementation of the Nautilus preferences dialog from
	here.  That is something that is specific to the Nautilus shell.
	The code lives in the Nautilus shell itself now.
	
	* libnautilus-extensions/nautilus-preferences-box.h:
	* libnautilus-extensions/nautilus-preferences-box.c:
	(nautilus_preferences_box_initialize),
	(preferences_box_select_pane),
	(preferences_box_category_list_recreate),
	(preferences_box_add_pane), (nautilus_preferences_box_update),
	(preferences_box_find_pane), (preferences_box_populate_pane),
	(nautilus_preferences_box_populate), (user_level_changed_callback),
	(nautilus_preferences_dialog_new):
	Add support for building preference boxes using structures to
	describe them.  Also add a convenience function for creating a
	GnomeDialog with a preference box as its sole child.
	