@@ -1,5 +1,11 @@
 2001-04-20  Ramiro Estrugo  <ramiro@eazel.com>
 
+	* src/nautilus-preferences-dialog.c:
+	Restore Seth's Home directory is desktop preference which i
+	accidentally clobbered with a previous checkin.  Sorry.
+	
+2001-04-20  Ramiro Estrugo  <ramiro@eazel.com>
+
 	Fix bug 8105 - GConf error getting font for icon view and text
 	view.
 		
